fix: Word-break-Problem endgültig erledigt. Firefox, IE 11 und Edge teilen die Wörter nach Silben. Chrome schneidet das Wort ab, aber nur dann, wenn es zu lange für eine Zeile ist. Ansonsten wird das ganze Wort in neue Zeile verschoben. feat: Zusätzliche Klassen für word-break und elipsis. Dadurch kan man das "word-wrap"-Verhalten schnell auf beliebege Elemente anwenden.

--- a/bin/css/style.css
+++ b/bin/css/style.css
@@ -42,12 +42,6 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     color: #483949;
     line-height: 1.25em;
-    /* hyphenate, word break */
-    -ms-word-break: break-all;
-    word-break: break-word; /* Non standard for webkit */
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    hyphens: auto;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -73,11 +67,39 @@ h3 {
     margin: 0 0 0.25em 0;
 }
 
-/*h4*/
-/*{*/
-/*font-size: 1em;*/
-/*margin: 0 0 0.25em 0;*/
-/*}*/
+/*************************/
+/* hyphenate, word break */
+/*************************/
+h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
+    word-break: normal;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.word-wrap,
+.word-break {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
+    word-break: normal;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 
 strong, b {
     font-weight: 400;
